Defined partial's variables. Added fonts and created assets folders with icons, images and fonts.

--- a/portfolio/src/components/styles/partials/_fonts.scss
+++ b/portfolio/src/components/styles/partials/_fonts.scss
@@ -1,2 +1,5 @@
 // Project Fonts
-$body: "";
+$light: "Poppins Light";
+$medium: "Poppins Medium";
+$semi: "Poppins SemiBold";
+$kalam: "Kalam Bold";
