--- a/portfolio/src/components/styles/main.css
+++ b/portfolio/src/components/styles/main.css
@@ -8,6 +8,16 @@
 
 body {
   min-height: 100vh;
+  font-size: 16px;
+  font-family: "Poppins Light";
+}
+
+a {
+  text-decoration: none;
+}
+
+ul, ol {
+  list-style: none;
 }
 
 .flex-c {
@@ -90,6 +100,18 @@ body {
 }
 
 @font-face {
-  font-family: "";
-  src: url("");
+  font-family: "Poppins Light";
+  src: url("../../assets/fonts/poppins-light.ttf");
+}
+@font-face {
+  font-family: "Poppins Medium";
+  src: url("../../assets/fonts/poppins-medium.ttf");
+}
+@font-face {
+  font-family: "Poppins SemiBold";
+  src: url("../../assets/fonts/poppins-semibold.ttf");
+}
+@font-face {
+  font-family: "Kalam Bold";
+  src: url("../../assets/fonts/kalam-bold.ttf");
 }/*# sourceMappingURL=main.css.map */
