--- a/portfolio/src/components/styles/main.scss
+++ b/portfolio/src/components/styles/main.scss
@@ -9,6 +9,21 @@
 @import "./partials/footer";
 
 @font-face {
-    font-family: "";
-    src: url("");
+    font-family: "Poppins Light";
+    src: url("../../assets/fonts/poppins-light.ttf");
+}
+
+@font-face {
+    font-family: "Poppins Medium";
+    src: url("../../assets/fonts/poppins-medium.ttf");
+}
+
+@font-face {
+    font-family: "Poppins SemiBold";
+    src: url("../../assets/fonts/poppins-semibold.ttf");
+}
+
+@font-face {
+    font-family: "Kalam Bold";
+    src: url("../../assets/fonts/kalam-bold.ttf");
 }
