--- a/portfolio/src/components/styles/partials/_mixins.scss
+++ b/portfolio/src/components/styles/partials/_mixins.scss
@@ -1,13 +1,30 @@
 // Mixins
 // Screen sizes
+@mixin mobile {
+    @media (min-width: $mobile-width) {
+        @content;
+    }
+}
+
 @mixin tablet {
     @media (min-width: $tablet-width) {
         @content;
     }
 }
 
-@mixin desktop {
-    @media (min-width: $desktop-width) {
+@mixin laptop {
+    @media (min-width: $laptop-width) {
+        @content;
+    }
+}
+
+@mixin small-desktop {
+    @media (min-width: $small-desktop-width) {
+        @content;
+    }
+}
+@mixin large-desktop {
+    @media (min-width: $large-desktop-width) {
         @content;
     }
 }
