--- a/portfolio/src/components/styles/partials/_variables.scss
+++ b/portfolio/src/components/styles/partials/_variables.scss
@@ -1,5 +1,18 @@
 // Project variables
 
-$desktop-width: 1440px;
+// Breakpoints
+$mobile-width: 375px;
 $tablet-width: 768px;
+$laptop-width: 1024px;
+$small-desktop-width: 1280px;
+$large-desktop-width: 1920px;
+
+// Color palette
 $primary-color: #6667AB;
+$secondary-color: #5eb36c;
+$light: #EBEBF0;
+$lighter: #F2F2F7;
+$dark: #242426;
+$darker: #1C1C1E;
+$gray: #808080;
+$chips-bg: #EFEFEF;
