--- a/portfolio/src/components/styles/main.scss
+++ b/portfolio/src/components/styles/main.scss
@@ -5,6 +5,8 @@
 @import "./partials/app";
 @import "./partials/header";
 @import "./partials/home";
+@import "./partials/intro";
+@import "./partials/featured";
 @import "./partials/card";
 @import "./partials/footer";
 
