--- a/portfolio/src/components/styles/partials/_card.scss
+++ b/portfolio/src/components/styles/partials/_card.scss
@@ -1,25 +1,37 @@
-/* Card */
-.chip {
-    background-color: #EFEFEF;
-    border-radius: 50px;
-    padding: 4px 16px;
-}
+// Card Component Styles
 
 .card {
-    background-color: #ffffff;
+    background-color: $white;
+    color: $black;
     border-radius: 8px;
-    width: 90%;
-    margin-bottom: 32px;
-    padding: 10% 5%;
-    align-items: flex-start;
-    box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.12);
-}
+    max-width: 690px;
+    margin: 0 auto 32px;
+    @extend .box-shadow;
 
-.card p {
-    text-align: left;
-}
+    &__img {
+        border-radius: 8px 0 0 8px;
+        height: auto;
+        width: 280px;
+    }
 
-.card img {
-    height: auto;
-    width: 280px;
+    &__info {
+        padding: 32px 50px;
+
+        &--chip {
+            background-color: $chips-bg;
+            border-radius: 50px;
+            padding: 4px 16px;
+            @extend .chips;
+        }
+    
+        &--title {
+            margin: 24px 0 16px;
+            @extend .h3;
+        }
+    
+        &--description {
+            @extend .card-description;
+            color: $gray;
+        }
+    }
 }
