--- a/portfolio/src/components/styles/partials/_header.scss
+++ b/portfolio/src/components/styles/partials/_header.scss
@@ -1,19 +1,22 @@
 /* Header Styles */
 .header {
-    position: relative;
-    padding: 24px;
-}
+    &__wrapper {
+        padding: 32px 120px;
+        justify-content: space-between;
+        max-width: $small-desktop-width;
+        margin: 0 auto;
+    }
 
-.logo {
-    height: 40px;
-}
+    &__logo {
+        height: 36px;
+        width: auto;
+    }
 
-.nav-wrapper {
-    position: absolute;
-    right: 24px;
-    top: 32px;
-}
+    &__nav-li {
+        margin-left: 40px
+    }
 
-.nav {
-    display: none;
+    a{
+        @extend .nav-menu;
+    }
 }
