--- a/portfolio/src/components/styles/partials/_variables.scss
+++ b/portfolio/src/components/styles/partials/_variables.scss
@@ -10,9 +10,13 @@ $large-desktop-width: 1920px;
 // Color palette
 $primary-color: #6667AB;
 $secondary-color: #5eb36c;
+$white: #ffffff;
 $light: #EBEBF0;
 $lighter: #F2F2F7;
+$chips-bg: #EFEFEF;
+$section-bg: #fafafa;
+$gray: #808080;
+$box-shadow: rgba(0, 0, 0, 0.12);
+$black: #000000;
 $dark: #242426;
 $darker: #1C1C1E;
-$gray: #808080;
-$chips-bg: #EFEFEF;
