--- a/portfolio/src/components/styles/main.scss
+++ b/portfolio/src/components/styles/main.scss
@@ -8,6 +8,7 @@
 @import "./partials/intro";
 @import "./partials/featured";
 @import "./partials/card";
+@import "./partials/about";
 @import "./partials/footer";
 
 @font-face {
