--- a/portfolio/src/components/styles/main.scss
+++ b/portfolio/src/components/styles/main.scss
@@ -4,10 +4,10 @@
 @import "./partials/global";
 @import "./partials/app";
 @import "./partials/header";
-@import "./partials/home";
 @import "./partials/intro";
 @import "./partials/featured";
 @import "./partials/card";
+@import "./partials/projects";
 @import "./partials/about";
 @import "./partials/footer";
 
