Updated page's styles and updated project's thumbnail images.

--- a/portfolio/src/components/styles/partials/_header.scss
+++ b/portfolio/src/components/styles/partials/_header.scss
@@ -1,5 +1,10 @@
 /* Header Styles */
 .header {
+    position: sticky;
+    top: 0;
+    background-color: $white;
+    @extend .box-shadow;
+    
     &__wrapper {
         padding: 32px 120px;
         justify-content: space-between;
