--- a/portfolio/src/components/styles/main.css
+++ b/portfolio/src/components/styles/main.css
@@ -97,11 +97,17 @@ ul, ol {
   align-items: center;
 }
 
-.box-shadow, .card {
+.box-shadow, .card, .header {
   box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Header Styles */
+.header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #ffffff;
+}
 .header__wrapper {
   padding: 32px 120px;
   justify-content: space-between;
@@ -166,6 +172,7 @@ ul, ol {
 }
 .featured__title {
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .card {
@@ -206,8 +213,9 @@ ul, ol {
   max-width: 1280px;
   margin: 0 auto;
 }
-.projects__chips {
-  margin: 32px 0 40px;
+.projects__title {
+  text-align: center;
+  margin-bottom: 40px;
 }
 .projects__chip {
   background-color: #EFEFEF;
@@ -222,20 +230,22 @@ ul, ol {
 }
 
 .about__wrapper {
-  padding: 72px 210px 200px 120px;
+  padding: 72px 200px 200px;
   max-width: 1280px;
   margin: 0 auto;
+  flex-direction: column;
 }
 .about__title {
   margin-bottom: 32px;
+  text-align: center;
 }
 .about__content {
   align-items: flex-start;
-  max-width: 862px;
-  margin: 0 auto;
+  width: 100%;
+  justify-content: space-between;
 }
 .about__text {
-  max-width: 426px;
+  max-width: 475px;
 }
 .about__text p {
   margin-bottom: 32px;
