--- a/portfolio/src/components/styles/partials/_about.scss
+++ b/portfolio/src/components/styles/partials/_about.scss
@@ -3,25 +3,27 @@
 .about {
 
     &__wrapper {
-        padding: 72px 210px 200px 120px;
+        padding: 72px 200px 200px;
         max-width: $small-desktop-width;
         margin: 0 auto;
+        flex-direction: column;
     }
 
     &__title {
         @extend .h2;
         margin-bottom: 32px;
+        text-align: center;
     }
 
     &__content {
         align-items: flex-start;
-        max-width: 862px;
-        margin: 0 auto
+        width: 100%;
+        justify-content: space-between;
     }
 
     &__text {
         @extend .body-bulk;
-        max-width: 426px;
+        max-width: 475px;
 
         p {
             margin-bottom: 32px;
