--- a/portfolio/src/components/styles/main.scss
+++ b/portfolio/src/components/styles/main.scss
@@ -8,6 +8,7 @@
 @import "./partials/featured";
 @import "./partials/card";
 @import "./partials/projects";
+@import "./partials/projectDetails";
 @import "./partials/about";
 @import "./partials/footer";
 
