--- a/portfolio/src/components/styles/partials/_fonts.scss
+++ b/portfolio/src/components/styles/partials/_fonts.scss
@@ -48,6 +48,13 @@ $kalam: "Kalam Bold";
     letter-spacing: 0.02em;
 }
 
+.project-title {
+    font-family: $light;
+    font-size: 40px;
+    line-height: 80px;
+    letter-spacing: 0.06em;
+}
+
 .body-light {
     font-family: $light;
     font-size: 16px;
