--- a/portfolio/src/components/styles/partials/_global.scss
+++ b/portfolio/src/components/styles/partials/_global.scss
@@ -32,3 +32,7 @@ ul, ol {
 .box-shadow {
     box-shadow: 0px 4px 4px 2px $box-shadow;
 }
+
+.box-shadow-light {
+    box-shadow: 0px 4px 4px $box-shadow-dark;
+}
