--- a/portfolio/src/components/styles/partials/_variables.scss
+++ b/portfolio/src/components/styles/partials/_variables.scss
@@ -17,6 +17,7 @@ $chips-bg: #EFEFEF;
 $section-bg: #fafafa;
 $gray: #808080;
 $box-shadow: rgba(0, 0, 0, 0.12);
+$box-shadow-dark: rgba(0,0,0,0.25);
 $black: #000000;
 $dark: #242426;
 $darker: #1C1C1E;
