Working on artifact's content.

--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -4,6 +4,7 @@
     top: 0;
     background-color: $white;
     @extend .box-shadow;
+    z-index: 9;
     
     &__wrapper {
         padding: 32px 120px;
