--- a/src/components/styles/partials/_projectDetails.scss
+++ b/src/components/styles/partials/_projectDetails.scss
@@ -39,9 +39,22 @@
     &__overview {
         align-items: flex-start;
         justify-content: space-evenly;
-        background-color: $primary-color;
+        // background-color: $primary-color;
         color: $white;
         padding: 32px;
+        position: relative;
+        z-index: 1;
+    
+        &::after {
+            position: absolute;
+            content: "";
+            top: 0;
+            z-index: -1;
+            width: 100vw;
+            height: 100%;
+            background-color: $primary-color;
+            @extend .box-shadow-light;
+        }
 
         &--left {
             max-width: 43%;
