--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -108,7 +108,7 @@ ul, ol {
   box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.12);
 }
 
-.box-shadow-light, .project__card {
+.box-shadow-light, .project__overview::after, .project__card {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -118,6 +118,7 @@ ul, ol {
   position: sticky;
   top: 0;
   background-color: #ffffff;
+  z-index: 9;
 }
 .header__wrapper {
   padding: 32px 120px;
@@ -264,9 +265,19 @@ ul, ol {
 .project__overview {
   align-items: flex-start;
   justify-content: space-evenly;
-  background-color: #6667AB;
   color: #ffffff;
   padding: 32px;
+  position: relative;
+  z-index: 1;
+}
+.project__overview::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  z-index: -1;
+  width: 100vw;
+  height: 100%;
+  background-color: #6667AB;
 }
 .project__overview--left {
   max-width: 43%;
