--- a/src/components/styles/partials/_projectDetails.scss
+++ b/src/components/styles/partials/_projectDetails.scss
@@ -39,9 +39,8 @@
     &__overview {
         align-items: flex-start;
         justify-content: space-evenly;
-        // background-color: $primary-color;
         color: $white;
-        padding: 32px;
+        padding: 32px 0;
         position: relative;
         z-index: 1;
     
@@ -63,6 +62,7 @@
         &--right {
             width: 30%;
             max-width: 40%;
+            margin-left: 30%
         }
 
         & h2 {
@@ -75,24 +75,29 @@
         }
     }
 
+    &__content {
+        // min-width: 100%;
+        // min-height: fit-content;
+    }
+
     &__img {
         height: 500px;
-        margin: 64px 0;
+        margin: 32px;
     }
 
     &__intro {
         max-width: $tablet-width;
-        margin: 0 auto 32px;
+        margin: 32px;
     }
 
     &__steps {
-        margin-top: 72px;
+        margin-top: 64px;
     }
 
     &__step{
         align-items: flex-start;
         justify-content: space-between;
-        margin-bottom: 72px;
+        margin: 32px 0;
 
         &:last-child{
             margin-bottom: 0;
