--- a/src/components/styles/partials/_card.scss
+++ b/src/components/styles/partials/_card.scss
@@ -34,7 +34,7 @@
     
         &--description {
             @extend .card-description;
-            color: $gray;
+            // color: $gray;
         }
     }
 }
