Completed artifact db. Updated meta tags & favicon. Added NavLinks to Header.

--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -25,5 +25,9 @@
     &__link{
         color: $black;
         @extend .nav-menu;
+
+        &--active {
+            @extend .nav-active;
+        }
     }
 }
