--- a/src/components/styles/partials/_projectDetails.scss
+++ b/src/components/styles/partials/_projectDetails.scss
@@ -86,8 +86,8 @@
     }
 
     &__intro {
-        max-width: $tablet-width;
-        margin: 32px;
+        // max-width: $tablet-width;
+        margin: 32px 0;
     }
 
     &__steps {
