--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -1,4 +1,4 @@
-.nav-menu, .header__link, .nav-active {
+.nav-menu, .header__link, .nav-active, .header__link--active {
   font-family: "Poppins SemiBold";
   font-size: 16px;
   text-transform: uppercase;
@@ -7,12 +7,12 @@
   border-bottom: 2px solid #ffffff;
   padding-bottom: 4px;
 }
-.nav-menu:hover, .header__link:hover, .nav-active:hover {
+.nav-menu:hover, .header__link:hover, .nav-active:hover, .header__link--active:hover {
   border-bottom: 2px solid #6667AB;
   color: #6667AB;
 }
 
-.nav-active {
+.nav-active, .header__link--active {
   color: #6667AB;
   border-bottom: 2px solid #6667AB;
 }
@@ -136,7 +136,6 @@ ul, ol {
 .header__link {
   color: #000000;
 }
-
 .intro {
   padding: 32px 250px 66px 295px;
   border-bottom: 1px solid rgba(102, 103, 171, 0.25);
@@ -291,8 +290,7 @@ ul, ol {
   margin: 32px;
 }
 .project__intro {
-  max-width: 768px;
-  margin: 32px;
+  margin: 32px 0;
 }
 .project__steps {
   margin-top: 64px;
