--- a/src/components/styles/partials/_card.scss
+++ b/src/components/styles/partials/_card.scss
@@ -4,21 +4,31 @@
     background-color: $white;
     color: $black;
     border-radius: 8px;
-    max-width: 690px;
     margin: 0 auto 32px;
     @extend .box-shadow;
     justify-content: space-between;
     align-items: flex-start;
+    flex-direction: column;
+    max-width: 345px;
+
+    @include laptop {
+        flex-direction: row;
+        max-width: 690px;
+    }
 
     &__img {
-        border-radius: 8px 0 0 8px;
+        width: 100%;
         height: auto;
-        width: 340px;
+        border-radius: 8px 8px 0 0;
+
+        @include laptop {
+            border-radius: 8px 0 0 8px;
+            width: 340px;
+        }
     }
 
     &__info {
         padding: 32px 50px;
-        max-width: 350px;
 
         &--chip {
             background-color: $chips-bg;
@@ -34,7 +44,6 @@
     
         &--description {
             @extend .card-description;
-            // color: $gray;
         }
     }
 }
