--- a/src/components/styles/partials/_intro.scss
+++ b/src/components/styles/partials/_intro.scss
@@ -1,18 +1,37 @@
 // Intro Section Styles
 
 .intro {
-    @extend .flex-c;
-    padding: 32px 250px 66px 295px;
-    border-bottom: 1px solid rgba(102,103,171, 0.25);
+    flex-direction: column;
+    padding: 32px;
+    border-bottom: 1px solid rgba(102, 103, 171, 0.25);
+
+    @include laptop {
+        flex-direction: row;
+        padding: 32px 200px 66px 255px;
+    }
+
+    @include small-desktop {
+        padding: 32px 250px 66px 295px;
+    }
 
     &__img {
         border-radius: 50%;
     }
 
     &__text-wrapper {
-        max-width: 384px;
-        max-height: 260px;
-        margin-left: 101px;
+        max-width: 300px;
+        max-height: unset;
+        margin: 32px 0 0;
+
+        @include laptop {
+            margin-left: 51px;
+        }
+
+        @include small-desktop {
+            max-width: 384px;
+            max-height: 260px;
+            margin-left: 101px;
+        }
     }
 
     &__h1 {
