--- a/src/components/styles/partials/_projectDetails.scss
+++ b/src/components/styles/partials/_projectDetails.scss
@@ -2,7 +2,19 @@
 
 .project {
     background-color: $section-bg;
-    padding: 72px 0 200px;
+    padding: 32px;
+
+    @include tablet {
+        padding: 32px 64px;
+    }
+
+    @include laptop {
+        padding: 72px 72px 96px;
+    }
+
+    @include small-desktop {
+        padding: 72px 0 200px;
+    }
 
     & p {
         @extend .body-bulk;
@@ -15,19 +27,45 @@
 
     &__section-title{
         @extend .h2;
-        margin-bottom: 72px;
         text-align: center;
+        color: $gray;
+        margin-bottom: 32px;
+        font-size: 16px;
+
+        @include laptop {
+            font-size: 24px;
+            margin-bottom: 48px;
+        }
+
+        @include small-desktop {
+            margin-bottom: 72px;
+        }
     }
 
     &__card {
         background-color: $white;
         border-radius: 25px;
-        padding: 40px 88px 80px;
         @extend .box-shadow-light;
+        padding: 16px;
+
+        @include tablet {
+            padding: 32px;
+        }
+
+        @include laptop {
+            padding: 40px 88px 80px;
+        }
     }
 
     &__title{
         @extend .project-title;
+        font-size: 24px;
+        line-height: 48px;
+
+        @include tablet {
+            font-size: 40px;
+            line-height: 80px;
+        }
     }
 
     &__subtitle {
@@ -40,29 +78,48 @@
         align-items: flex-start;
         justify-content: space-evenly;
         color: $white;
-        padding: 32px 0;
-        position: relative;
-        z-index: 1;
-    
-        &::after {
-            position: absolute;
-            content: "";
-            top: 0;
-            z-index: -1;
-            width: 100vw;
-            height: 100%;
-            background-color: $primary-color;
-            @extend .box-shadow-light;
+        background-color: $primary-color;
+        @extend .box-shadow-light;
+        border-radius: 5px;
+        flex-direction: column;
+        padding: 16px;
+        margin-bottom: 32px;
+
+        @include tablet {
+            flex-direction: row;
+        }
+
+        @include laptop {
+            padding: 32px 24px;
+        }
+
+        @include small-desktop {
+            padding: 48px;
         }
 
         &--left {
-            max-width: 43%;
+            margin-bottom: 24px;
+
+            @include tablet {
+                width: 45%;
+                max-width: 45%;
+                margin: 0;
+            }
+
+            @include small-desktop {
+                max-width: 43%;
+            }
         }
 
         &--right {
-            width: 30%;
-            max-width: 40%;
-            margin-left: 30%
+            @include tablet {
+                width: 30%;
+            }
+
+            @include small-desktop {
+                max-width: 40%;
+                margin-left: 30%;
+            }
         }
 
         & h2 {
@@ -75,19 +132,15 @@
         }
     }
 
-    &__content {
-        // min-width: 100%;
-        // min-height: fit-content;
-    }
-
     &__img {
-        height: 500px;
-        margin: 32px;
-    }
+        width: 100%;
+        height: auto;
+        margin: 0 0 24px 0;
 
-    &__intro {
-        // max-width: $tablet-width;
-        margin: 32px 0;
+        @include small-desktop {
+            height: 500px;
+            width: auto;
+        }
     }
 
     &__steps {
@@ -96,16 +149,13 @@
 
     &__step{
         align-items: flex-start;
-        justify-content: space-between;
         margin: 32px 0;
+        flex-direction: column;
 
         & h3 {
             @extend .h3;
             color: $primary-color;
-        }
-
-        & p {
-            max-width: 601px;
+            margin-bottom: 16px;
         }
 
         & a {
