--- a/src/components/styles/partials/_projects.scss
+++ b/src/components/styles/partials/_projects.scss
@@ -4,9 +4,14 @@
     background-color: $section-bg;
     
     &__wrapper {
-        padding: 72px 120px;
-        max-width: $small-desktop-width;
         margin: 0 auto;
+        padding: 32px;
+        max-width: unset;
+
+        @include laptop {
+            padding: 72px 120px;
+            max-width: $small-desktop-width;
+        }
     }
 
     &__title {
@@ -14,10 +19,6 @@
         text-align: center;
         margin-bottom: 40px;
     }
-
-    // &__chips {
-    //     margin: 32px 0 40px;
-    // }
 
     &__chip {
         background-color: $chips-bg;
