--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -10,6 +10,7 @@
 @import "./partials/projects";
 @import "./partials/projectDetails";
 @import "./partials/about";
+@import "./partials/notFound";
 @import "./partials/footer";
 
 @font-face {
