--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -17,7 +17,7 @@
   border-bottom: 2px solid #6667AB;
 }
 
-.nav-mobile, .header__mobile {
+.nav-mobile, .not-found__btn, .header__mobile {
   font-family: "Poppins SemiBold";
   font-size: 16px;
   text-transform: uppercase;
@@ -32,7 +32,7 @@
   line-height: 48px;
 }
 
-.h2, .about__title, .project__overview h2, .project__section-title, .projects__title, .featured__title {
+.h2, .not-found__title, .about__title, .project__overview h2, .project__section-title, .projects__title, .featured__title {
   font-family: "Poppins Medium";
   font-size: 24px;
   line-height: 36px;
@@ -53,7 +53,7 @@
   letter-spacing: 0.06em;
 }
 
-.body-light, body, .body-bulk, .about__text, .project__overview li, .project p, .body-med, .about__links, .about__cta, .project__step a, .intro__cta {
+.body-light, body, .body-bulk, .not-found__text, .about__text, .project__overview li, .project p, .body-med, .about__links, .about__cta, .project__step a, .intro__cta {
   font-family: "Poppins Light";
   font-size: 16px;
   line-height: 24px;
@@ -65,7 +65,7 @@
   letter-spacing: 0.04em;
 }
 
-.body-bulk, .about__text, .project__overview li, .project p {
+.body-bulk, .not-found__text, .about__text, .project__overview li, .project p {
   line-height: 32px;
   letter-spacing: 0.04em;
 }
@@ -113,7 +113,7 @@ ul, ol {
   align-items: center;
 }
 
-.box-shadow, .card, .header {
+.box-shadow, .not-found__btn, .card, .header {
   box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -593,6 +593,60 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .about__links {
   color: #6667AB;
   text-decoration: underline;
+}
+
+.not-found {
+  min-height: 80vh;
+}
+.not-found__wrapper {
+  margin: 0 auto;
+  flex-direction: column;
+  padding: 32px;
+}
+@media (min-width: 1024px) {
+  .not-found__wrapper {
+    padding: 64px;
+    max-width: 768px;
+  }
+}
+.not-found__title {
+  margin-bottom: 40px;
+  text-align: center;
+}
+.not-found__content {
+  flex-direction: column-reverse;
+}
+@media (min-width: 768px) {
+  .not-found__content {
+    align-items: center;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1024px) {
+  .not-found__content {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+}
+.not-found__text p {
+  margin: 32px;
+}
+.not-found__img {
+  width: 100%;
+  max-width: 350px;
+  margin-bottom: 32px;
+}
+@media (min-width: 768px) {
+  .not-found__img {
+    width: unset;
+  }
+}
+.not-found__btn {
+  text-transform: capitalize;
+  background-color: #6667AB;
+  margin: 0 32px;
+  padding: 12px 24px;
+  border-radius: 5px;
 }
 
 /* Footer */
