--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -70,7 +70,7 @@
   letter-spacing: 0.04em;
 }
 
-.chips, .projects__chip, .card__info--chip {
+.chips, .projects__chip--active, .projects__chip, .card__info--chip {
   font-size: 12px;
   line-height: 18px;
   letter-spacing: 0.04em;
@@ -356,14 +356,29 @@ Note: Beware of modifying this element as it can break the animations - you shou
   text-align: center;
   margin-bottom: 40px;
 }
+.projects__chips {
+  margin: 0 auto 32px;
+  max-width: 264px;
+  justify-content: space-between;
+}
 .projects__chip {
   background-color: #EFEFEF;
   border-radius: 50px;
   padding: 4px 16px;
-  margin-right: 32px;
+  min-width: 120px;
   cursor: pointer;
+  text-align: center;
 }
 .projects__chip:hover {
+  background-color: #6667AB;
+  color: #ffffff;
+}
+.projects__chip--active {
+  border-radius: 50px;
+  padding: 4px 16px;
+  min-width: 120px;
+  cursor: pointer;
+  text-align: center;
   background-color: #6667AB;
   color: #ffffff;
 }
