--- a/src/components/styles/partials/_projects.scss
+++ b/src/components/styles/partials/_projects.scss
@@ -20,17 +20,35 @@
         margin-bottom: 40px;
     }
 
+    &__chips {
+        margin: 0 auto 32px;
+        max-width: 264px;
+        justify-content: space-between;
+    }
+
     &__chip {
         background-color: $chips-bg;
         border-radius: 50px;
         padding: 4px 16px;
-        margin-right: 32px;
+        min-width: 120px;
         @extend .chips;
         cursor: pointer;
+        text-align: center;
         
         &:hover {
             background-color: $primary-color;
             color: $white;
         }
+    }
+
+    &__chip--active {
+        border-radius: 50px;
+        padding: 4px 16px;
+        min-width: 120px;
+        @extend .chips;
+        cursor: pointer;
+        text-align: center;
+        background-color: $primary-color;
+        color: $white;
     }
 }
